@@ -29,14 +29,9 @@ $mapTable->setAttribute('style', 'margin-top: 4px;');
 $icon = $fsIcon = null;
 
 if (!empty($this->data['maps'])) {
-	// no profile record when get by name
-	if (!empty($this->data['mapname'])) {
-		CProfile::update('web.maps.sysmapid', $this->data['sysmapid'], PROFILE_TYPE_ID);
-	}
-
 	$mapComboBox = new CComboBox('sysmapid', get_request('sysmapid', 0), 'submit()');
-	foreach ($this->data['maps'] as $sysmapid => $map) {
-		$mapComboBox->addItem($sysmapid, get_node_name_by_elid($sysmapid, null, ': ').$map['name']);
+	foreach ($this->data['maps'] as $sysmapId => $map) {
+		$mapComboBox->addItem($sysmapId, get_node_name_by_elid($sysmapId, null, ': ').$map['name']);
 	}
 
 	$headerForm = new CForm('get');
